--- a/TimeCo/TimeCo.PL/Views/Home/Index.cshtml
+++ b/TimeCo/TimeCo.PL/Views/Home/Index.cshtml
@@ -2,7 +2,35 @@
     ViewData["Title"] = "Home Page";
 }
 
+<script>
+
+    document.addEventListener('DOMContentLoaded', function () {
+        var calendarEl = document.getElementById('calendar');
+        var calendar = new FullCalendar.Calendar(calendarEl, {
+            initialView: 'dayGridMonth',
+            events: @Html.Raw(ViewData["Events"]),
+            resources: @Html.Raw(ViewData["Resources"]),
+            headerToolbar: {
+                left: 'today prev,next',
+                center: 'title',
+                right: 'timeGridWeek,dayGridMonth,listMonth'
+            },
+        });
+        calendar.render();
+    });
+
+</script>
+
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Welcome To Our Calendar App!</h1>
+    <a href="/MyCalendar">View My Calendar</a>
+</div>
+
+<div class="row">
+    <div class="col-md-6">
+        <a href="/Event"><h3>Events</h3></a>
+    </div>
+    <div class="col-md-6">
+        <a href="/Location"><h3>Locations</h3></a>
+    </div>
 </div>
